[package]
name = "bluepill-exp"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.5.2", features = ["rt", "stm32f103" ] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.8", features = ["device"] }
embedded-hal = "0.2.3"
nb = "0.1"
panic-semihosting = "0.5.2"
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
